# avocr

./: .gitignore  Package.swift  README.md
Sources/AVOCRLib/: AVOCR.swift  AVOCREngine.swift  CLIArgs.swift  CancellationToken.swift  Constants.swift  Dependencies.swift  Errors.swift  FileEnumerator.swift  Logger.swift  MultiprocessCoordinator.swift  OCRValidator.swift  OutputStrategies.swift  OutputWriter.swift  PDFRenderer.swift  ProgressReporter.swift  ReadingOrder.swift  Runtime.swift  WorkItems.swift  WorkerProtocol.swift
Sources/avocr-cli/: CLIArgs.swift
Tests/: CLIArgsTests.swift  FileEnumeratorTests.swift  IntegrationTests.swift  MockOCREngine.swift  MultiprocessCoordinatorTests.swift  OCRProcessorTests.swift  OutputStrategiesTests.swift  OutputWriterTests.swift  PDFRendererTests.swift  README.md  ReadingOrderTests.swift  RetryPolicyTests.swift  TEST_IMPROVEMENT_PLAN.md  WorkItemsTests.swift  WorkerMessageTests.swift
benchmark/: README.md  __init__.py  prepare.py  pyproject.toml  recompute.py  report.py  run.py  score.py
benchmark/docker/paddleocr/: Dockerfile  worker.py
benchmark/docker/tesseract/: Dockerfile  worker.py
benchmark/engines/: __init__.py  avocr.py  base.py  paddleocr.py  tesseract.py
benchmark/tests/: test_prepare.py  test_report.py  test_score.py
