[project]
name = "avocr-benchmark"
version = "0.1.0"
description = "Benchmark harness for avocr, Tesseract, and PaddleOCR"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "jiwer>=3.0",
    "pymupdf>=1.24",
    "rich>=13.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".."]
